# rep-log

./: .gitignore  alembic.ini  flake.nix  justfile  plan.md  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: iv1iy3x98s0g7sl205815g2q2kxdxcix-source
alembic/: env.py
alembic/versions/: 3eaefcea9647_initial_model_design_with_users.py  4000806b299b_added_workout_templates.py  952f51ffb227_.py  97250441fb42_improved_timezone_handling_and_added_.py  a86c35eec038_initial_models.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  exercises.ts  muscle_groups.ts  sets.ts  workout_exercises.ts  workouts.ts
frontend/src/components/layout/: AppShell.tsx  BottomNav.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: DashboardPage.tsx  ExercisesPage.tsx  LoginPage.tsx  WorkoutDetailPage.tsx  WorkoutsPage.tsx
frontend/src/types/: index.ts
src/rep_log/: __init__.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py  settings.py
src/rep_log/crud/: auth.py  exercises.py  muscle_groups.py  sets.py  template_exercises.py  templates.py  workout_exercises.py  workouts.py
src/rep_log/routes/: auth.py  exercises.py  muscle_groups.py  sets.py  template_exercises.py  templates.py  workout_exercises.py  workouts.py
tests/: conftest.py  test_auth.py  test_exercises.py  test_workouts.py
