[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rep-log"
version = "0.1.0"
description = ""
requires-python = ">=3.12"

dependencies = [
  "fastapi", "uvicorn[standard]", "sqlalchemy[asyncio]", "alembic", "asyncpg", "aiosqlite", "pydantic-settings", "passlib[bcrypt]", "python-jose[cryptography]", "email-validator", "python-multipart"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "SIM"]
ignore = ["B008"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["jose.*", "passlib.*"]
ignore_missing_imports = true
disable_error_codes = ["import-untyped", "no-any-return"]
